updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a nurse making the transition into tech</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Smalltown Midwest</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, kayaking, hiking, climbing, ultimate frisbee, bboying</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Internet czar</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to use my nursing skills to help spread wellness on a larger scale</p>
     </section>
 
     <footer id="footer">
